--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOX-STREAM</title>
+    <title>SEEULIVE</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -75,7 +75,7 @@
         }
         
         video {
-            width: 100%; /* Full width of the container */
+            width: auto; /* Full width of the container */
             height: auto; /* Height is set automatically to maintain aspect ratio */
             max-height: 80vh; /* Optional: set a max-height to ensure it fits within the viewport */
             border-radius: 5px;
@@ -86,12 +86,12 @@
 </head>
 <body>
     <div class="header">
-        <h1>BOX-STREAM</h1>
+        <h1>IAM IRON MAN</h1>
     </div>
 
     <div class="input-group">
         <input type="text" id="urlInput" placeholder="Enter URL here">
-        <button id="fetchButton">Fetch Video Link</button>
+        <button id="fetchButton">Get Video</button>
     </div>
 
     <div class="video-container" id="videoContainer">
