--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         .header h1 {
             margin: 0;
-            color: #4caf50;
+            color: #000000;
         }
 
         .input-group {
@@ -47,7 +47,7 @@
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            background-color: #4caf50;
+            background-color: #ffffff;
             color: white;
             cursor: pointer;
             box-shadow: 0 4px #2e7d32;
@@ -90,7 +90,7 @@
     </div>
 
     <div class="input-group">
-        <input type="text" id="urlInput" placeholder="Enter URL here">
+        <input type="text" id="urlInput" placeholder="Video Url">
         <button id="fetchButton">Get Video</button>
     </div>
 
