--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         .header h1 {
             margin: 0;
-            color: #000000;
+            color: #ffffff;
         }
 
         .input-group {
