--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #1a1a1a;
+            background-image: url("paper.gif");
             color: #fff;
             margin: 0;
             padding: 0;
