--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #1a1a1a;
-            background-image: url("paper.gif");
+            background-image: url("https://i.postimg.cc/1t660DQM/ironman.jpg");
             color: #fff;
             margin: 0;
             padding: 0;
