--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
-            background-color: #ffffff;
+            background-color: #000000;
             color: white;
             cursor: pointer;
             box-shadow: 0 4px #2e7d32;
