--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             background-color: #000000;
             color: white;
             cursor: pointer;
-            box-shadow: 0 4px #2e7d32;
+            box-shadow: 0 4px #000000;
             margin: 5px;
             transition: all 0.3s ease;
         }
