--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>SEEULIVE</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #1a1a1a;
             background-image: url("https://i.postimg.cc/1t660DQM/ironman.jpg");
+            background-color: #cccccc;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: #fff;
             margin: 0;
             padding: 0;
