--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         .header h1 {
             margin: 0;
-            color: #ffffff;
+            color: #000000;
         }
 
         .input-group {
