--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>IAM IRON MAN</h1>
+       <a>align="right" <h1>IAM IRON MAN</h1></a>
     </div>
 
     <div class="input-group">
