--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 align="right">SAY MY NAME</h1> 
+        <a><h1 align="right">SAY MY NAME</h1></a>
     </div>
 
     <div class="input-group">
