--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 </head>
 <body>
     <div class="header">
-        <a><h1 align="right">SAY MY NAME</h1></a>
+        <h1 align="right">SAY MY NAME</h1>
     </div>
-
+ <h2 align="right">center</h2> 
     <div class="input-group">
         <input type="text" id="urlInput" placeholder="Video Url">
         <button id="fetchButton">Get Video</button>
