--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEEULIVE</title>
+     <h1 align="right">center</h1> 
     <style>
         body {
             background-image: url("https://i.postimg.cc/s2stC4nG/wallpaperflare-com-wallpaper-1.jpg");
@@ -87,9 +88,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 align="right">SAY MY NAME</h1>
-    </div>
- <h2 align="right">center</h2> 
+    </div> 
     <div class="input-group">
         <input type="text" id="urlInput" placeholder="Video Url">
         <button id="fetchButton">Get Video</button>
@@ -107,7 +106,7 @@
         document.getElementById('fetchButton').addEventListener('click', async () => {
             const urlInput = document.getElementById('urlInput').value;
             if (!urlInput) {
-                alert('Please enter a URL.');
+                alert('enter a URL.');
                 return;
             }
 
