--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>BOX-STREAM</title>
     <style>
         body {
+            background-image: url('https://i.postimg.cc/sgyj67R1/wallpaperflare-com-wallpaper-2.jpg');
+            background-repeat: no-repeat;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #1a1a1a;
             color: #fff;
