--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             background-image: url('https://i.postimg.cc/sgyj67R1/wallpaperflare-com-wallpaper-2.jpg');
             background-repeat: no-repeat;
+            background-size: 100% 100%;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #1a1a1a;
             color: #fff;
