--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             }
 
             try {
-                const response = await fetch('https://seeutera.golive8897.workers.dev/?url=${encodeURIComponent(urlInput)}`);
+                const response = await fetch('https://boxstream.thejuniortest.workers.dev/?url=${encodeURIComponent(urlInput)}`);
                 const data = await response.json();
 
                 if (data.ok && data.downloadLink) {
