--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         }
         
         video {
-            width: 100%; /* Full width of the container */
+            width: auto; /* Full width of the container */
             height: auto; /* Height is set automatically to maintain aspect ratio */
-            max-height: 80vh; /* Optional: set a max-height to ensure it fits within the viewport */
+            max-height: 250vh; /* Optional: set a max-height to ensure it fits within the viewport */
             border-radius: 5px;
         }        
 
